--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.3.1",
+    "react-aria-components": "^1.3.3",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
