chore: add path alias config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,11 @@
 
     "allowJs": false,
     "esModuleInterop": false,
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
