--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
@@ -23,6 +22,11 @@ dist-ssr
 *.sln
 *.sw?
 
+# vite files
 *.tsbuildinfo
 vite.config.js
 vite.config.d.ts
+
+# environment
+.env
+.env.local
