--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dist"
   ],
   "dependencies": {
+    "openai": "^4.68.1",
     "react": "^18.3.1",
     "react-aria-components": "^1.4.1",
     "react-dom": "^18.3.1"
