--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint --fix ./src/**/*.{js,jsx,ts,tsx}",
+    "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -50,6 +51,7 @@
     "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
     "eslint-plugin-react-refresh": "^0.4.13",
     "globals": "^15.11.0",
+    "prettier": "^3.3.3",
     "storybook": "^8.3.6",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.10.0",
