--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint --fix ./src/**/*.{js,jsx,ts,tsx}",
+    "lint": "eslint --fix ./src/**/*.{ts,tsx}",
     "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
@@ -47,9 +47,8 @@
     "@vitejs/plugin-react": "^4.3.3",
     "clsx": "^2.1.1",
     "eslint": "^9.13.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-react-hooks": "5.1.0-rc-fb9a90fa48-20240614",
-    "eslint-plugin-react-refresh": "^0.4.13",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
     "storybook": "^8.3.6",
