--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint --fix ./src/**/*.{ts,tsx}",
+    "stylelint": "stylelint \"./src/**/*.css\" --fix",
     "format": "prettier --write \"./src/**/*.{ts,tsx}\"",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
@@ -53,6 +54,8 @@
     "globals": "^15.11.0",
     "prettier": "^3.3.3",
     "storybook": "^8.3.6",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard": "^36.0.1",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.10.0",
     "vite": "^5.4.9",
