--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,15 +25,20 @@ jobs:
             fi
           done
           exit 1
-      # Setup .npmrc file to publish to npm
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: lts/*
           registry-url: "https://registry.npmjs.org"
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
       - name: Build Application
-        run: npm run build
-      - run: npm publish --provenance --access public
+        run: pnpm build
+      - name: Publish package
+        run: npm publish --provenance --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
