--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "dist"
   ],
   "dependencies": {
+    "chroma-js": "^3.1.2",
     "openai": "^4.68.1",
     "react": "^18.3.1",
     "react-aria-components": "^1.4.1",
