--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@storybook/builder-vite": "^8.3.6",
     "@storybook/react": "^8.3.6",
     "@storybook/react-vite": "^8.3.6",
+    "@types/chroma-js": "^2.4.4",
     "@types/css-modules": "^1.0.5",
     "@types/node": "^22.7.7",
     "@types/react": "^18.3.11",
