--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,30 +1,14 @@
 name: Publish Package to npmjs
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
     steps:
       - name: Checkout main branch
         uses: actions/checkout@v4
-        with:
-          ref: main
-          fetch-depth: 0
-      - name: Check tagged branch
-        run: |
-          BRANCHS=$(git branch --contains ${{ github.ref_name }})
-          set -- $BRANCHS
-          for BRANCH in $BRANCHS ; do
-            if [[ "$BRANCH" == "main" ]]; then
-              exit 0
-            fi
-          done
-          exit 1
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
