--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "openai": "^4.76.0",
     "react": "^18.3.1",
     "react-aria-components": "^1.5.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "valibot": "1.0.0-beta.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.16.0",
