chore: add @google/generative-ai dependency version 0.21.0

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dist"
   ],
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "chroma-js": "^3.1.2",
     "openai": "^4.76.0",
     "react": "^18.3.1",
