--- a/package.json
+++ b/package.json
@@ -52,9 +52,7 @@
     "@google/generative-ai": "^0.21.0",
     "chroma-js": "^3.1.2",
     "openai": "^4.76.0",
-    "react": "^19.0.0",
     "react-aria-components": "^1.5.0",
-    "react-dom": "^19.0.0",
     "valibot": "1.0.0-beta.9"
   },
   "devDependencies": {
@@ -84,6 +82,10 @@
     "typescript-eslint": "^8.19.0",
     "vite": "^5.4.11",
     "vite-plugin-dts": "^4.3.0"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme"
 }
