--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@google/generative-ai": "^0.21.0",
     "chroma-js": "^3.1.2",
     "openai": "^4.76.0",
+    "react-aria": "^3.36.0",
     "react-aria-components": "^1.5.0",
     "valibot": "1.0.0-beta.9"
   },
