--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
       "import": "./dist/ginga-ui.es.js"
     },
     "./components/*": {
+      "types": "./dist/components/*.d.ts",
       "import": "./dist/components/*.es.js"
     },
     "./dist/variables.css": "./dist/variables.css",
@@ -84,8 +85,8 @@
     "vite-plugin-dts": "^4.3.0"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme"
 }
