--- a/package.json
+++ b/package.json
@@ -85,8 +85,8 @@
     "vite-plugin-dts": "^4.3.0"
   },
   "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^17.0.0  || ^18.0.0  || ^19.0.0",
+    "react-dom": "^17.0.0  || ^18.0.0  || ^19.0.0"
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme"
 }
