--- a/package.json
+++ b/package.json
@@ -58,7 +58,6 @@
     "valibot": "1.0.0-beta.9"
   },
   "devDependencies": {
-    "@eslint/js": "^9.16.0",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-links": "^8.4.7",
     "@storybook/blocks": "^8.4.7",
@@ -73,14 +72,16 @@
     "@vitejs/plugin-react": "^4.3.4",
     "chromatic": "^11.20.0",
     "eslint": "^9.16.0",
+    "@eslint/eslintrc": "^3",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "typescript-eslint": "^8.19.0",
     "prettier": "^3.4.2",
     "storybook": "^8.4.7",
     "stylelint": "^16.11.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-standard": "^36.0.1",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.19.0",
     "vite": "^5.4.11",
     "vite-plugin-dts": "^4.3.0"
   },
