--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ginga-ui",
   "private": false,
-  "version": "0.7.5",
+  "version": "0.7.6",
   "type": "module",
   "description": "brand-new UI component library for web",
   "keywords": [
@@ -86,8 +86,8 @@
     "vite-plugin-dts": "^4.3.0"
   },
   "peerDependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^^19.0.0"
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme"
 }
