fix: typo in peerDependencies

--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   },
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^^19.0.0"
+    "react-dom": "^18.0.0 || ^19.0.0"
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme"
 }
