--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "import": "./dist/components/*.es.js"
     },
     "./dist/variables.css": "./dist/variables.css",
-    "./dist/style.css": "./dist/style.css"
+    "./dist/ginga-ui.css": "./dist/ginga-ui.css"
   },
   "files": [
     "dist"
@@ -68,8 +68,8 @@
     "@types/chroma-js": "^3.1.0",
     "@types/css-modules": "^1.0.5",
     "@types/node": "^22.10.5",
-    "@types/react": "^19.0.3",
-    "@types/react-dom": "^19.0.2",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
     "chromatic": "^11.22.0",
     "eslint": "^9.17.0",
@@ -86,8 +86,8 @@
     "vite-plugin-dts": "^4.4.0"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || ^19.0.0",
-    "react-dom": "^18.0.0 || ^19.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme"
 }
