--- a/package.json
+++ b/package.json
@@ -31,16 +31,28 @@
     "build-storybook": "storybook build",
     "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
-  "module": "./dist/ginga-ui.es.js",
-  "types": "./dist/index.d.ts",
+  "module": "./dist/es/index.js",
+  "types": "./dist/types/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/ginga-ui.es.js"
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/es/index.js",
+      "require": "./dist/cjs/index.cjs"
     },
-    "./components/*": {
-      "types": "./dist/components/*/*.d.ts",
-      "import": "./dist/components/*/*.es.js"
+    "./core": {
+      "types": "./dist/types/components/index.d.ts",
+      "import": "./dist/es/components.js",
+      "require": "./dist/cjs/components.cjs"
+    },
+    "./core/*": {
+      "types": "./dist/types/components/*/*.d.ts",
+      "import": "./dist/es/src/components/*/*.js",
+      "require": "./dist/cjs/src/components/*/*.cjs"
+    },
+    "./ai": {
+      "types": "./dist/types/lib/ai/themeClient.d.ts",
+      "import": "./dist/es/ai.js",
+      "require": "./dist/cjs/ai.cjs"
     },
     "./variables.css": "./dist/variables.css",
     "./style.css": "./dist/ginga-ui.css"
