fix: exports path on package.json

--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
       "require": "./dist/components/index.cjs.js"
     },
     "./core/*": {
-      "types": "./dist/components/index/*/*.d.ts",
-      "import": "./dist/components/index/*/*.es.js",
-      "require": "./dist/components/index/*/*.cjs.js"
+      "types": "./dist/components/*/*.d.ts",
+      "import": "./dist/components/*/*.es.js",
+      "require": "./dist/components/*/*.cjs.js"
     },
     "./ai": {
       "types": "./dist/ai/index.d.ts",
