feat: setup changesets

--- a/packages/components/Table/package.json
+++ b/packages/components/Table/package.json
@@ -21,7 +21,6 @@
   "bugs": {
     "url": "https://github.com/newt239/ginga-ui/issues"
   },
-  "workspaces": [],
   "main": "src/index.ts",
   "scripts": {
     "dev": "pnpm build:fast -- --watch",
@@ -51,7 +50,8 @@
   ],
   "sideEffects": false,
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme",
   "tsup": {
