--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "url": "https://github.com/newt239/ginga-ui/issues"
   },
   "packageManager": "pnpm@10.5.2",
-  "workspaces": [],
   "scripts": {
+    "changeset-version": "changeset version",
+    "changeset-publish": "changeset publish",
     "clean": "find . -type d \\( -name 'node_modules' -o -name '.turbo' -o -name 'dist' \\) -prune -exec rm -rf {} +",
     "dev": "turbo run dev --filter=./packages/**",
     "build": "turbo run build --filter=./packages/**",
@@ -47,11 +48,9 @@
     "valibot": "1.0.0-beta.11"
   },
   "devDependencies": {
-    "vite": "^6.1.1",
-    "turbo": "^2.4.2",
-    "tsup": "^8.4.0",
-    "@eslint/js": "^9.21.0",
+    "@changesets/cli": "^2.28.1",
     "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.21.0",
     "@storybook/addon-essentials": "^8.5.1",
     "@storybook/addon-links": "^8.5.1",
     "@storybook/blocks": "^8.5.1",
@@ -72,8 +71,11 @@
     "stylelint": "^16.12.0",
     "stylelint-config-recess-order": "^5.1.1",
     "stylelint-config-standard": "^36.0.1",
+    "tsup": "^8.4.0",
+    "turbo": "^2.4.2",
     "typescript": "^5.7.2",
-    "typescript-eslint": "^8.19.1"
+    "typescript-eslint": "^8.19.1",
+    "vite": "^6.1.1"
   },
   "pnpm": {
     "overrides": {
