remove: provenance settings

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -46,8 +46,7 @@
   ],
   "sideEffects": false,
   "publishConfig": {
-    "access": "public",
-    "provenance": true
+    "access": "public"
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme"
 }
