--- a/packages/components/Accordion/package.json
+++ b/packages/components/Accordion/package.json
@@ -43,8 +43,7 @@
   ],
   "sideEffects": false,
   "publishConfig": {
-    "access": "public",
-    "provenance": true
+    "access": "public"
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme",
   "tsup": {
