--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -62,8 +62,7 @@
   ],
   "sideEffects": false,
   "publishConfig": {
-    "access": "public",
-    "provenance": true
+    "access": "public"
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme",
   "tsup": {
