--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ginga-ui/docs",
   "version": "0.9.2",
+  "private": true,
   "dependencies": {
     "@ginga-ui/core": "workspace:*"
   }
