--- a/packages/components/switch/package.json
+++ b/packages/components/switch/package.json
@@ -43,7 +43,8 @@
   ],
   "sideEffects": false,
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme",
   "tsup": {
