--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -46,7 +46,8 @@
   ],
   "sideEffects": false,
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   },
   "homepage": "https://github.com/newt239/ginga-ui#readme"
 }
