--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "chromatic": "^11.26.1",
+    "esbuild-css-modules-plugin": "^3.1.4",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
