--- a/packages/components/dialog/package.json
+++ b/packages/components/dialog/package.json
@@ -46,17 +46,5 @@
     "access": "public",
     "provenance": true
   },
-  "homepage": "https://github.com/newt239/ginga-ui#readme",
-  "tsup": {
-    "clean": true,
-    "target": "es2019",
-    "format": [
-      "cjs",
-      "esm"
-    ],
-    "banner": {
-      "js": "\"use client\""
-    },
-    "sourcemap": true
-  }
+  "homepage": "https://github.com/newt239/ginga-ui#readme"
 }
