--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src", "tests", "index.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "tests", "index.ts"]
 }
