--- a/packages/components/table/package.json
+++ b/packages/components/table/package.json
@@ -24,8 +24,8 @@
   "main": "src/index.ts",
   "scripts": {
     "dev": "pnpm build:fast -- --watch",
-    "build": "tsup src --dts",
-    "build:fast": "tsup src"
+    "build": "tsup",
+    "build:fast": "tsup"
   },
   "dependencies": {
     "react-aria": "^3.36.0",
