--- a/package.json
+++ b/package.json
@@ -40,6 +40,17 @@
   "files": [
     "dist"
   ],
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "chroma-js": "^3.1.2",
@@ -64,7 +75,7 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "chromatic": "^11.26.1",
-    "esbuild-css-modules-plugin": "^3.1.4",
+    "esbuild-plugin-react18-css": "^0.0.4",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
