--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,12 +23,11 @@
   },
   "include": [
     "@types",
-    ".storybook/**/*",
     "**/*.js",
     "**/*.jsx",
     "**/*.ts",
     "**/*.tsx",
     "**/*.mjs",
-    "**/*.mts",
+    "**/*.mts"
   ]
 }
