--- a/stories/package.json
+++ b/stories/package.json
@@ -3,11 +3,24 @@
   "private": true,
   "version": "0.9.2",
   "type": "module",
+  "scripts": {
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
+  },
   "dependencies": {
     "@ginga-ui/core": "workspace:*"
   },
   "devDependencies": {
-    "react": "^18.3.1"
+    "react": "^18.3.1",
+    "@storybook/addon-essentials": "^8.6.1",
+    "@storybook/addon-links": "^8.6.1",
+    "@storybook/blocks": "^8.6.1",
+    "@storybook/builder-vite": "^8.6.1",
+    "@storybook/react": "^8.6.1",
+    "@storybook/react-vite": "^8.6.1",
+    "storybook": "^8.6.1",
+    "vite": "^6.2.0"
   },
   "peerDependencies": {
     "react": ">=18"
