fix: tsup config

--- a/packages/components/table/package.json
+++ b/packages/components/table/package.json
@@ -48,7 +48,8 @@
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "require": "./dist/index.js"
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.js"
     },
     "./package.json": "./package.json",
     "./index.css": "./dist/index.css"
