--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,25 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "useDefineForClassFields": true,
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "target": "ESNext",
     "module": "ESNext",
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
+    "moduleResolution": "Node",
+    "jsx": "react-jsx",
+    "useDefineForClassFields": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "allowJs": false,
     "esModuleInterop": true,
-    "moduleResolution": "Node",
     "baseUrl": "./",
     "declaration": true
   },
-  "include": [
-    "@types",
-    "**/*.js",
-    "**/*.jsx",
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.mjs",
-    "**/*.mts"
-  ]
+  "include": ["**/*.js", "**/*.ts", "**/*.tsx", "**/*.mjs"]
 }
