add: anthoropic sdk

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -27,6 +27,7 @@
     "build:fast": "tsup"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.39.0",
     "@google/generative-ai": "^0.21.0",
     "chroma-js": "^3.1.2",
     "openai": "^4.77.3",
