--- a/docs/package.json
+++ b/docs/package.json
@@ -2,7 +2,16 @@
   "name": "@ginga-ui/docs",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "@ginga-ui/core": "workspace:*"
+    "@ginga-ui/core": "workspace:*",
+    "next": "15.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
